--- a/hooks-lab/package.json
+++ b/hooks-lab/package.json
@@ -10,11 +10,13 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
-    "ahooks": "^3.7.0",
+    "ahooks": "^3.7.2",
     "dayjs": "^1.11.5",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-use": "^17.4.0",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
@@ -41,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.188"
   }
 }
