--- a/todolist-xstate-ts/package.json
+++ b/todolist-xstate-ts/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/uuid": "^9.0.1",
     "@xstate/inspect": "^0.7.0",
     "@xstate/react": "^3.0.1",
     "classnames": "^2.3.1",
@@ -19,9 +20,9 @@
     "todomvc-app-css": "^2.4.2",
     "todomvc-common": "^1.0.5",
     "typescript": "^4.4.2",
-    "uuid-v4": "^0.1.0",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.0",
-    "xstate": "^4.33.4"
+    "xstate": "^4.37.0"
   },
   "scripts": {
     "start": "react-scripts start",
